--- a/build.gradle
+++ b/build.gradle
@@ -4,25 +4,25 @@ apply plugin: 'maven'
 group = 'uk.co.pete_b'
 version = '0.0.1-SNAPSHOT'
 
-description = """advent-of-code"""
+description = "advent-of-code"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
 tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
+    options.encoding = 'UTF-8'
 }
 
 
 
 repositories {
-        
-     maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "http://repo.maven.apache.org/maven2" }
 }
 dependencies {
-    compile group: 'commons-io', name: 'commons-io', version:'2.6'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.7'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
+    compile 'commons-io:commons-io:2.6'
+    compile 'org.apache.commons:commons-lang3:3.7'
+    compile 'org.slf4j:slf4j-api:1.7.25'
+    compile 'org.slf4j:slf4j-log4j12:1.7.25'
 
-    testCompile group: 'junit', name: 'junit', version:'4.12'
+    testCompile 'junit:junit:4.12'
 }
