--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,29 @@
 apply plugin: 'java'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
-group = 'uk.co.pete_b'
-version = '0.0.1-SNAPSHOT'
+project.group = 'uk.co.pete_b'
+project.version = '0.0.1-SNAPSHOT'
+project.description = "advent-of-code"
 
-description = "advent-of-code"
-
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+project.sourceCompatibility = "13"
+project.targetCompatibility = "13"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-
-
 repositories {
-    maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "https://repo.maven.apache.org/maven2" }
 }
-dependencies {
-    compile 'commons-io:commons-io:2.6'
-    compile 'org.apache.commons:commons-lang3:3.7'
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.slf4j:slf4j-log4j12:1.7.25'
 
-    testCompile 'junit:junit:4.12'
+dependencies {
+    implementation 'commons-io:commons-io:2.6'
+    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-log4j12:1.7.25'
+
+    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+    testImplementation 'junit:junit:4.12'
 }
