--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,35 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation 'org.slf4j:slf4j-log4j12:1.7.25'
 
-    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+    implementation ('com.googlecode.json-simple:json-simple:1.1.1') {
+        exclude group: "junit", module: "junit"
+    }
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.5.2"
+}
+
+test {
+    useJUnitPlatform {
+        excludeTags '2016', '2017', '2018'
+    }
+}
+
+task test2016(type: Test) {
+    useJUnitPlatform {
+        includeTags '2016'
+    }
+}
+
+task test2017(type: Test) {
+    useJUnitPlatform {
+        includeTags '2017'
+    }
+}
+
+task test2018(type: Test) {
+    useJUnitPlatform {
+        includeTags '2018'
+    }
 }
