--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ tasks.withType(JavaCompile) {
 
 repositories {
     maven { url "https://repo.maven.apache.org/maven2" }
+    mavenCentral()
 }
 
 dependencies {
