--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
 test {
     useJUnitPlatform {
-        excludeTags '2016', '2017', '2018', '2019'
+        excludeTags '2016', '2017', '2018', '2019', '2020'
     }
 }
 
@@ -59,5 +59,11 @@ task test2018(type: Test) {
 task test2019(type: Test) {
     useJUnitPlatform {
         includeTags '2019'
+    }
+}
+
+task test2020(type: Test) {
+    useJUnitPlatform {
+        includeTags '2020'
     }
 }
