--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ project.group = 'uk.co.pete_b'
 project.version = '0.0.1-SNAPSHOT'
 project.description = "advent-of-code"
 
-project.sourceCompatibility = "15"
-project.targetCompatibility = "15"
+project.sourceCompatibility = "17"
+project.targetCompatibility = "17"
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -18,18 +18,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'ch.qos.logback:logback-core:1.2.7'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation 'org.slf4j:slf4j-log4j12:1.7.32'
 
-    implementation ('com.googlecode.json-simple:json-simple:1.1.1') {
-        exclude group: "junit", module: "junit"
-    }
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.7'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
 test {
