--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.0'
 
     testImplementation 'ch.qos.logback:logback-classic:1.2.7'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
