--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'maven-publish'
 
@@ -15,14 +16,19 @@ tasks.withType(JavaCompile) {
 repositories {
     maven { url "https://repo.maven.apache.org/maven2" }
     mavenCentral()
+    flatDir {
+        dirs 'c:/unzipped/z3-4.12.4-x64-win/bin/'
+    }
 }
 
 dependencies {
-    implementation 'ch.qos.logback:logback-core:1.4.13'
+    implementation 'ch.qos.logback:logback-core:1.4.14'
+    implementation 'com.github.dpaukov:combinatoricslib3:3.3.0'
     implementation 'commons-io:commons-io:2.13.0'
     implementation 'org.apache.commons:commons-lang3:3.14.0'
     implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'com.github.dpaukov:combinatoricslib3:3.3.0'
+    // Note c:/unzipped/z3-4.12.4-x64-win/bin/ needs to be in the path
+    implementation ':com.microsoft.z3'
 
     testImplementation 'ch.qos.logback:logback-classic:1.4.13'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
